--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "WebDesign Master",
   "license": "ISC",
   "devDependencies": {
+    "bower": "^1.8.8",
     "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
